# STSRL

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  a20_later_act_boss_source_coverage_contract.md  battle_dataset_search_and_sl_plan.md  collaboration_workflow.md  conquer_the_spire_wsl_spike.md  current_status.md  decapitate_the_spire_wsl_spike.md  experiment_log.md  m1_model_guided_search_sandbox_synthesis.md  normal_information_search_and_resource_value_plan.md  project_architecture.md  simulator_candidate_scan.md  simulator_options.md  sts_lightspeed_maintainer_role.md  sts_lightspeed_source_manifest.json  sts_lightspeed_wsl_spike.md  t007_review_handoff_2026-06-22.md
patches/: sts_lightspeed_battle_start_metadata.patch  sts_lightspeed_checkpoint_restore.patch  sts_lightspeed_gcc15_compat.patch  sts_lightspeed_non_combat_potion_actions.patch  sts_lightspeed_public_projection.patch  sts_lightspeed_public_run_context.patch  sts_lightspeed_pybind11_v304.patch  sts_lightspeed_run_potion_snapshot.patch  sts_lightspeed_step_simulator.patch
scripts/: verify_lightspeed_patch_stack.sh  verify_lightspeed_source.sh
tests/: t009_helpers.py  test_a20_battle_start_coverage.py  test_action_space.py  test_artifact_versioning.py  test_assisted_source_generation.py  test_battle_agent.py  test_battle_start_pool.py  test_checkpoint_verification.py  test_cli.py  test_constructed_battle_start.py  test_de_assisted_fixed_cohort_comparison.py  test_decision_record.py  test_episode_evaluation.py  test_expert_source_coverage.py  test_live_adapter.py  (+46 more)
(+171 files in other folders)
