[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-combat-rl"
version = "0.1.0"
description = "Minimal Slay the Spire CommunicationMod-style combat probe."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "sts-combat-rl contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
sts-combat-probe = "sts_combat_rl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
